[package]
name = "pkt_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
tokio = { version = "1.37.0", features = ["net"]}


[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"]}
